// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Dropdown open unchanged 1`] = `
<div>
  <div
    class="memori-dropdown"
  >
    <div
      class="memori-dropdown--trigger"
      tabindex="0"
    >
      <button
        class="memori-button memori-button--rounded memori-button--padded"
      >
        Open
      </button>
    </div>
    <div
      class="memori-dropdown--content memori-dropdown--content--bottom-right"
    >
      <div>
        Content
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Dropdown unchanged 1`] = `
<div>
  <div
    class="memori-dropdown"
  >
    <div
      class="memori-dropdown--trigger"
      tabindex="0"
    >
      <button
        class="memori-button memori-button--rounded memori-button--padded"
      >
        Open
      </button>
    </div>
  </div>
</div>
`;

exports[`renders Dropdown with className unchanged 1`] = `
<div>
  <div
    class="memori-dropdown custom-dropdown"
  >
    <div
      class="memori-dropdown--trigger"
      tabindex="0"
    >
      <button
        class="memori-button memori-button--rounded memori-button--padded"
      >
        Open
      </button>
    </div>
  </div>
</div>
`;

exports[`renders Dropdown with placement bottom-left unchanged 1`] = `
<div>
  <div
    class="memori-dropdown"
  >
    <div
      class="memori-dropdown--trigger"
      tabindex="0"
    >
      <button
        class="memori-button memori-button--rounded memori-button--padded"
      >
        Open
      </button>
    </div>
  </div>
</div>
`;

exports[`renders Dropdown with placement bottom-right unchanged 1`] = `
<div>
  <div
    class="memori-dropdown"
  >
    <div
      class="memori-dropdown--trigger"
      tabindex="0"
    >
      <button
        class="memori-button memori-button--rounded memori-button--padded"
      >
        Open
      </button>
    </div>
  </div>
</div>
`;

exports[`renders Dropdown with placement top-left unchanged 1`] = `
<div>
  <div
    class="memori-dropdown"
  >
    <div
      class="memori-dropdown--trigger"
      tabindex="0"
    >
      <button
        class="memori-button memori-button--rounded memori-button--padded"
      >
        Open
      </button>
    </div>
  </div>
</div>
`;

exports[`renders Dropdown with placement top-right unchanged 1`] = `
<div>
  <div
    class="memori-dropdown"
  >
    <div
      class="memori-dropdown--trigger"
      tabindex="0"
    >
      <button
        class="memori-button memori-button--rounded memori-button--padded"
      >
        Open
      </button>
    </div>
  </div>
</div>
`;
